<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text1ViewId"
        style="@style/Text1"

        android:layout_width="198dp"
        android:layout_height="77dp"
        android:text="@string/fourText1"
        android:textColor="@color/ourcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text2ViewId"
        style="@style/Text2"

        android:layout_width="198dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:text="@string/fourText2"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@+id/text1ViewId"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="109dp" />

    <TextView
        android:id="@+id/text3ViewId"
        style="@style/Text3"

        android:layout_width="142dp"
        android:layout_height="201dp"
        android:text="@string/fourText3"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2ViewId"
        app:layout_constraintVertical_bias="0.417"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text4ViewId"
        style="@style/Text4"

        android:layout_width="141dp"
        android:layout_height="211dp"
        android:text="@string/fourText4"
        android:textColor="@color/ourcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toEndOf="@+id/text3ViewId"
        app:layout_constraintTop_toBottomOf="@+id/text2ViewId"
        app:layout_constraintVertical_bias="0.403"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>